--- a/BrokerParent/pom.xml
+++ b/BrokerParent/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.neclab.ngsildbroker</groupId>
 	<artifactId>broker-parent</artifactId>
@@ -165,25 +167,16 @@
 			<version>2.1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.strimzi</groupId>
-			<artifactId>kafka-oauth-client</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.smallrye.reactive</groupId>
-			<artifactId>smallrye-reactive-messaging-in-memory</artifactId>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-oidc</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.github.fmcejudo</groupId>
-			<artifactId>quarkus-eureka</artifactId>
-			<version>0.0.14</version>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-keycloak-authorization</artifactId>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -220,6 +213,67 @@
 			<properties>
 				<quarkus.package.type>native</quarkus.package.type>
 			</properties>
+		</profile>
+		<profile>
+			<id>eureka</id>
+			<activation>
+				<property>
+					<name>eureka</name>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.github.fmcejudo</groupId>
+					<artifactId>quarkus-eureka</artifactId>
+					<version>0.0.14</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>kafka</id>
+			<activation>
+				<property>
+					<name>kafka</name>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>io.quarkus</groupId>
+					<artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>io.strimzi</groupId>
+					<artifactId>kafka-oauth-client</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>in-memory</id>
+			<activation>
+				<property>
+					<name>in-memory</name>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>io.smallrye.reactive</groupId>
+					<artifactId>smallrye-reactive-messaging-in-memory</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<dependencies>
+				<dependency>
+					<groupId>io.quarkus</groupId>
+					<artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+				</dependency>
+
+				<dependency>
+					<groupId>io.smallrye.reactive</groupId>
+					<artifactId>smallrye-reactive-messaging-in-memory</artifactId>
+				</dependency>
+			</dependencies>
 		</profile>
 		<profile>
 			<id>windowsext</id>
