--- a/AllInOneRunner/pom.xml
+++ b/AllInOneRunner/pom.xml
@@ -25,7 +25,7 @@
 			<artifactId>query-manager</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>eu.neclab.ngsildbroker</groupId>
 			<artifactId>registry-manager</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
@@ -39,7 +39,7 @@
 			<groupId>eu.neclab.ngsildbroker</groupId>
 			<artifactId>subscription-manager</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
