Enable Kafka connection on the AAIO
Part of the commits enabling Kafka connection on All in one runner.

Signed-off-by: Meric Feyzullahoglu <meric.feyzullahoglu@gmail.com>

--- a/AllInOneRunner/src/main/resources/application.properties
+++ b/AllInOneRunner/src/main/resources/application.properties
@@ -11,7 +11,7 @@ mysettings.postgres.host=${POSTGRES_SERVICE:localhost}
 mysettings.postgres.port=${dbport:5432}
 mysettings.postgres.username=${dbuser:ngb}
 mysettings.postgres.password=${POSTGRES_PASSWORD:ngb}
-mysettings.postgres.database-name=${dbname:ngb}
+mysettings.postgres.database-name=${POSTGRES_DBNAME:ngb}
 mysettings.gateway.host=${gateway.host:localhost}
 mysettings.gateway.port=${gateway.port:9090}
 atcontext.url=http://${mysettings.gateway.host}:${mysettings.gateway.port}/ngsi-ld/contextes/
