--- a/AllInOneRunner/src/main/resources/application-kafka.properties
+++ b/AllInOneRunner/src/main/resources/application-kafka.properties
@@ -1,5 +1,5 @@
-mysettings.kafka.bootstrap.host=${bushost:localhost}
-mysettings.kafka.bootstrap.port=${busport:9092}
+mysettings.kafka.bootstrap.host=${KAFKA_BOOTSTRAP:localhost}
+mysettings.kafka.bootstrap.port=${KAFKA_PORT:9092}
 bootstrap.servers=${mysettings.kafka.bootstrap.host}:${mysettings.kafka.bootstrap.port}
 #Kafka settings
 kafka.bootstrap.servers=${bootstrap.servers}
@@ -22,6 +22,7 @@ mp.messaging.incoming.entityretrieve.value.deserializer=eu.neclab.ngsildbroker.c
 #readability block###########
 mp.messaging.outgoing.history.connector=smallrye-kafka
 mp.messaging.outgoing.history.topic=${scorpio.topics.temporal}
+mp.messaging.outgoing.history.value.serializer=eu.neclab.ngsildbroker.commons.serialization.messaging.SubscriptionRequestSerializer
 #readability block###########
 mp.messaging.outgoing.isubs.topic=${scorpio.topics.internalregsub}
 mp.messaging.outgoing.isubs.connector=smallrye-kafka
