Parameterize scorpio topic names for adaptable configuration
Scorpio topics now are named based on the variables passed
through the helm chart. They still have the old topic names
as defaults.

Signed-off-by: Meric Feyzullahoglu <meric.feyzullahoglu@gmail.com>

--- a/AllInOneRunner/src/main/resources/application.properties
+++ b/AllInOneRunner/src/main/resources/application.properties
@@ -42,15 +42,15 @@ scorpio.registry.batch-operations.upsert.max=1000
 scorpio.registry.batch-operations.update.max=1000
 scorpio.registry.batch-operations.delete.max=1000
 scorpio.registry.batch-operations.query.max=1000
-scorpio.topics.entity=ENTITY
-scorpio.topics.registry=REGISTRY
-scorpio.topics.temporal=TEMPORAL
-scorpio.topics.internalnotification=I_NOTIFY
-scorpio.topics.internalregsub=I_REGSUB
-scorpio.topics.subalive=SUB_ALIVE
-scorpio.topics.subsync=SUB_SYNC
-scorpio.topics.regsubalive=REG_SUB_ALIVE
-scorpio.topics.regsubsync=REG_SUB_SYNC
+scorpio.topics.entity=${ENTITY_TOPIC:ENTITY}
+scorpio.topics.registry=${REGISTRY_TOPIC:REGISTRY}
+scorpio.topics.temporal=${TEMPORAL_TOPIC:TEMPORAL}
+scorpio.topics.internalnotification=${INTERNAL_NOTIFY_TOPIC:I_NOTIFY}
+scorpio.topics.internalregsub=${INTERNAL_REGISTRYSUB_TOPIC:I_REGSUB}
+scorpio.topics.subalive=${SUB_ALIVE_TOPIC:SUB_ALIVE}
+scorpio.topics.subsync=${SUB_SYNC_TOPIC:SUB_SYNC}
+scorpio.topics.regsubalive=${REGISTRYSUB_ALIVE_TOPIC:REG_SUB_ALIVE}
+scorpio.topics.regsubsync=${REGISTRYSUB_SYNC_TOPIC:REG_SUB_SYNC}
 #Database settings
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${mysettings.postgres.username}
