--- a/BrokerParent/pom.xml
+++ b/BrokerParent/pom.xml
@@ -227,6 +227,18 @@
 			<artifactId>quarkus-systemd-notify</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-oidc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-keycloak-authorization</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>		
 	</dependencies>
 	<profiles>
 		<profile>
