--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
   <modules>
     <module>BrokerParent</module>
     <module>Commons</module>
-    <module>at-context-server</module>
+    <!-- <module>at-context-server</module> -->
     <module>EntityManager</module>
     <module>QueryManager</module>
     <module>SubscriptionManager</module>
     <module>RegistryManager</module>
     <module>RegistrySubscriptionManager</module>
-    <module>HistoryEntityManager</module>
-    <module>HistoryQueryManager</module>
+    <!-- <module>HistoryEntityManager</module>
+    <module>HistoryQueryManager</module> -->
     <module>AllInOneRunner</module>
     <module>SnsFanoutMessaging</module>
   </modules>
