--- a/AllInOneRunner/src/main/resources/application-kafka.properties
+++ b/AllInOneRunner/src/main/resources/application-kafka.properties
@@ -1,5 +1,5 @@
-mysettings.kafka.bootstrap.host=${bushost:localhost}
-mysettings.kafka.bootstrap.port=${busport:9092}
+mysettings.kafka.bootstrap.host=${KAFKA_BOOTSTRAP:localhost}
+mysettings.kafka.bootstrap.port=${KAFKA_PORT:9092}
 bootstrap.servers=${mysettings.kafka.bootstrap.host}:${mysettings.kafka.bootstrap.port}
 client-id-prefix=$[quarkus.uuid}
 group.id=$[quarkus.application.name}$[quarkus.uuid}
@@ -33,8 +33,8 @@ mp.messaging.incoming.entitybatchretrieve.auto.offset.reset=latest
 mp.messaging.incoming.entitybatchretrieve.broadcast=true
 #mp.messaging.incoming.entitybatchretrieve.value.deserializer=eu.neclab.ngsildbroker.commons.serialization.messaging.BatchRequestDeserializer
 #readability block###########.
-mp.messaging.outgoing.history.connector=smallrye-kafka
-mp.messaging.outgoing.history.topic=${scorpio.topics.temporal}
+# mp.messaging.outgoing.history.connector=smallrye-kafka
+# mp.messaging.outgoing.history.topic=${scorpio.topics.temporal}
 #readability block###########
 mp.messaging.outgoing.isubs.topic=${scorpio.topics.internalregsub}
 mp.messaging.outgoing.isubs.connector=smallrye-kafka
@@ -89,10 +89,10 @@ mp.messaging.incoming.regsubsyncretrieve.topic=${scorpio.topics.regsubsync}
 mp.messaging.incoming.regsubsyncretrieve.auto.offset.reset=latest
 mp.messaging.incoming.regsubsyncretrieve.broadcast=true
 #mp.messaging.incoming.regsubsyncretrieve.value.deserializer=eu.neclab.ngsildbroker.commons.serialization.messaging.SyncMessageDeserializer
-mp.messaging.outgoing.histsync.connector=smallrye-kafka
-mp.messaging.outgoing.histsync.topic=${scorpio.topics.histsync}
-#mp.messaging.outgoing.regsubsync.value.serializer=eu.neclab.ngsildbroker.commons.serialization.messaging.SyncMessageSerializer
-mp.messaging.incoming.histsyncretrieve.connector=smallrye-kafka
-mp.messaging.incoming.histsyncretrieve.topic=${scorpio.topics.histsync}
-mp.messaging.incoming.histsyncretrieve.auto.offset.reset=latest
-mp.messaging.incoming.histsyncretrieve.broadcast=true
+# mp.messaging.outgoing.histsync.connector=smallrye-kafka
+# mp.messaging.outgoing.histsync.topic=${scorpio.topics.histsync}
+# #mp.messaging.outgoing.regsubsync.value.serializer=eu.neclab.ngsildbroker.commons.serialization.messaging.SyncMessageSerializer
+# mp.messaging.incoming.histsyncretrieve.connector=smallrye-kafka
+# mp.messaging.incoming.histsyncretrieve.topic=${scorpio.topics.histsync}
+# mp.messaging.incoming.histsyncretrieve.auto.offset.reset=latest
+# mp.messaging.incoming.histsyncretrieve.broadcast=true
