--- a/AllInOneRunner/src/main/resources/application.properties
+++ b/AllInOneRunner/src/main/resources/application.properties
@@ -12,14 +12,14 @@ quarkus.vertx.prefer-native-transport=true
 #quarkus.http.tcp-quick-ack=true
 #quarkus.http.tcp-cork=true
 #quarkus.http.tcp-fast-open=true
-mysettings.postgres.host=${dbhost:localhost}
+mysettings.postgres.host=${POSTGRES_SERVICE:localhost}
 mysettings.postgres.port=${dbport:5432}
 mysettings.postgres.username=${dbuser:ngb}
-mysettings.postgres.password=${dbpass:ngb}
-mysettings.postgres.database-name=${dbname:ngb}
+mysettings.postgres.password=${POSTGRES_PASSWORD:ngb}
+mysettings.postgres.database-name=${POSTGRES_DBNAME:ngb}
 mysettings.gateway.host=${gateway.host:localhost}
 mysettings.gateway.port=${gateway.port:9090}
-jdbcurl=jdbc:postgresql://${mysettings.postgres.host}:${mysettings.postgres.port}/${mysettings.postgres.database-name}?ApplicationName=${quarkus.application.name}
+jdbcurl=jdbc:postgresql://${mysettings.postgres.host}:${mysettings.postgres.port}/${mysettings.postgres.database-name}?ApplicationName=${quarkus.application.name}&sslmode=require
 scorpio.messaging.duplicate=true
 scorpio.gatewayurl=http://localhost:9090
 atcontext.url=http://localhost:9090/ngsi-ld/v1/jsonldContexts/
@@ -48,17 +48,17 @@ scorpio.registry.batch-operations.upsert.max=1000
 scorpio.registry.batch-operations.update.max=1000
 scorpio.registry.batch-operations.delete.max=1000
 scorpio.registry.batch-operations.query.max=1000
-scorpio.topics.entity=ENTITY
-scorpio.topics.entitybatch=ENTITYBATCH
-scorpio.topics.registry=REGISTRY
-scorpio.topics.temporal=TEMPORAL
-scorpio.topics.internalnotification=I_NOTIFY
-scorpio.topics.internalregsub=I_REGSUB
-scorpio.topics.subalive=SUB_ALIVE
-scorpio.topics.subsync=SUB_SYNC
-scorpio.topics.regsubalive=REG_SUB_ALIVE
-scorpio.topics.regsubsync=REG_SUB_SYNC
-scorpio.topics.histsync=HIST_SUB_SYNC
+scorpio.topics.entitybatch=${ENTITYBATCH_TOPIC:ENTITYBATCH}
+scorpio.topics.entity=${ENTITY_TOPIC:ENTITY}
+scorpio.topics.registry=${REGISTRY_TOPIC:REGISTRY}
+scorpio.topics.temporal=${TEMPORAL_TOPIC:TEMPORAL}
+scorpio.topics.internalnotification=${INTERNAL_NOTIFY_TOPIC:I_NOTIFY}
+scorpio.topics.internalregsub=${INTERNAL_REGISTRYSUB_TOPIC:I_REGSUB}
+scorpio.topics.subalive=${SUB_ALIVE_TOPIC:SUB_ALIVE}
+scorpio.topics.subsync=${SUB_SYNC_TOPIC:SUB_SYNC}
+scorpio.topics.regsubalive=${REGISTRYSUB_ALIVE_TOPIC:REG_SUB_ALIVE}
+scorpio.topics.regsubsync=${REGISTRYSUB_SYNC_TOPIC:REG_SUB_SYNC}
+# scorpio.topics.histsync=HIST_SUB_SYNC not used without history manager
 scorpio.entitymap.cleanup.ttl=30 sec
 scorpio.entitymap.cleanup.schedule=10s
 scorpio.startupdelay=5s
@@ -70,11 +70,12 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${mysettings.postgres.username}
 quarkus.datasource.password=${mysettings.postgres.password}
 quarkus.datasource.jdbc.url=${jdbcurl}
-quarkus.datasource.reactive.url=postgresql://${mysettings.postgres.host}:${mysettings.postgres.port}/${mysettings.postgres.database-name}
+quarkus.datasource.reactive.url=postgresql://${mysettings.postgres.host}:${mysettings.postgres.port}/${mysettings.postgres.database-name}?sslmode=require
 quarkus.datasource.reactive.shared=true
 quarkus.datasource.reactive.cache-prepared-statements=true
 quarkus.datasource.reactive.max-size=50
 quarkus.datasource.reactive.idle-timeout=15s
+quarkus.datasource.reactive.trust-all=true
 #quarkus.datasource.reactive.event-loop-size=100
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.baseline-on-migrate=true
@@ -88,3 +89,7 @@ scorpio.registry.subscription.checkinterval=30s
 scorpio.subscription.checkinterval=2s
 scorpio.fedupdaterate=600s
 quarkus.http.limits.max-initial-line-length=50000
+#Keycloak
+quarkus.oidc.auth-server-url=${KEYCLOAK_SERVER_URL}realms/${REALM}
+quarkus.oidc.client-id=${CLIENT_ID}
+quarkus.oidc.tls.verification=none
