--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <modules>
     <module>BrokerParent</module>
     <module>Commons</module>
-    <!-- <module>at-context-server</module> -->
+    <module>at-context-server</module>
     <module>EntityManager</module>
     <module>QueryManager</module>
     <module>SubscriptionManager</module>
