Fix internal server error on subscription
The subscription manager implicitly requires the at context server
to work, which was deactivated before. Now it is activated.
In addition an endpoint was secured with RBAC.

Signed-off-by: Meric Feyzullahoglu <meric.feyzullahoglu@gmail.com>

--- a/AllInOneRunner/pom.xml
+++ b/AllInOneRunner/pom.xml
@@ -9,11 +9,11 @@
 	<artifactId>all-in-one-runner</artifactId>
 	<name>AllInOneRunner</name>
 	<dependencies>
-		<!-- <dependency>
+		<dependency>
 			<groupId>eu.neclab.ngsildbroker</groupId>
 			<artifactId>at-context-server</artifactId>
 			<version>${parent.version}</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>eu.neclab.ngsildbroker</groupId>
 			<artifactId>entity-manager</artifactId>
