Fix naming scheme which was broken with rebase
Signed-off-by: Meric Feyzullahoglu <meric.feyzullahoglu@gmail.com>

--- a/AllInOneRunner/pom.xml
+++ b/AllInOneRunner/pom.xml
@@ -86,9 +86,9 @@
 			</activation>
 			<properties>
 				<quarkus.container-image.build>true</quarkus.container-image.build>
-				<quarkus.container-image.name>ibn40/scorpio-${project.artifactId}</quarkus.container-image.name>
+				<quarkus.container-image.name>scorpio-${project.artifactId}</quarkus.container-image.name>
 				<quarkus.container-image.tag>${docker-tag}</quarkus.container-image.tag>
-				<quarkus.container-image.registry>scorpiobroker</quarkus.container-image.registry>
+				<quarkus.container-image.registry>ibn40</quarkus.container-image.registry>
 				<quarkus.container-image.group></quarkus.container-image.group>
 			</properties>
 		</profile>
